--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".PerformFunctionOnSelectedBookActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".BooksListRecyclerView" />
+        </activity>
+        <activity
             android:name=".BooksListRecyclerView"
             android:exported="false">
             <meta-data
